--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,7 +1,7 @@
 ---
 - id: centralized-pre-commit-hooks-rust
   name: centralized-pre-commit-hooks-rust
-  description: ""
+  description: "Centralized pre-commits hooks for Rust"
   entry: centralized-pre-commit-hooks-rust
   language: python
   require_serial: true
