--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,11 +1,11 @@
 ---
-default_install_hook_types: [commit-msg, pre-commit]
+default_install_hook_types: [pre-commit]
 repos:
   - repo: local
     hooks:
       - id: centralized-pre-commit-hooks-rust
         name: centralized-pre-commit-hooks-rust
-        description: ""
+        description: "Centralized pre-commits hooks for Rust"
         entry: centralized-pre-commit-hooks-rust
         language: python
         require_serial: true
