--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ readme = "README.md"
 version = "0.0.1"
 
   [project.urls]
-  repository = "https://github.com/juancarlosjr97/pre-commit-to-rule-them-all"
+  repository = "https://github.com/juancarlosjr97/pre-commit-to-rule-them_all"
 
   [project.scripts]
   centralized-pre-commit-hooks-rust = "pre_commit_to_rule_them_all.run_pre_commit_hooks_centralized:use_pre_commit_hooks_rust"
@@ -22,3 +22,8 @@ include-package-data = true
 
 [tool.setuptools.packages.find]
 include = [ "pre_commit_to_rule_them_all*" ]
+
+[tool.coverage.run]
+omit = [
+    "tests/*"
+]
