--- a/renovate.json
+++ b/renovate.json
@@ -14,6 +14,7 @@
     "osvVulnerabilityAlerts": true,
     "platformAutomerge": true,
     "pre-commit": {
+        "enabled": true,
         "fileMatch": [
             "(^|/)\\.pre-commit-config\\.ya?ml$",
             "pre_commit_to_rule_them_all/pre-commit-hooks-rust.yaml.yaml"
