--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,3 +12,13 @@ repos:
         verbose: true
         stages:
           - pre-commit
+      - id: centralized-pre-commit-hooks-python
+        name: centralized-pre-commit-hooks-python
+        description: "Centralized pre-commits hooks for Python"
+        entry: centralized-pre-commit-hooks-python
+        language: python
+        require_serial: true
+        verbose: true
+        stages:
+          - pre-commit
+...
