--- a/renovate.json
+++ b/renovate.json
@@ -6,6 +6,7 @@
     "dependencyDashboardOSVVulnerabilitySummary": "all",
     "extends": [
         ":assignee(juancarlosjr97)",
+        ":enablePreCommit",
         ":reviewer(juancarlosjr97)",
         ":semanticPrefixChore",
         "config:recommended",
@@ -14,10 +15,10 @@
     "osvVulnerabilityAlerts": true,
     "platformAutomerge": true,
     "pre-commit": {
-        "enabled": true,
         "fileMatch": [
             "(^|/)\\.pre-commit-config\\.ya?ml$",
-            "pre_commit_to_rule_them_all/pre-commit-hooks-rust.yaml.yaml"
+            "pre_commit_to_rule_them_all/pre-commit-hooks-rust.yaml",
+            "pre_commit_to_rule_them_all/pre-commit-hooks-python.yaml"
         ]
     }
 }
