--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,15 @@ default_install_hook_types: [pre-commit]
 repos:
   - repo: local
     hooks:
+      - id: centralized-pre-commit-hooks-python
+        name: centralized-pre-commit-hooks-python
+        description: "Centralized pre-commits hooks for Python"
+        entry: centralized-pre-commit-hooks-python
+        language: python
+        require_serial: true
+        verbose: true
+        stages:
+          - pre-commit
       - id: centralized-pre-commit-hooks-rust
         name: centralized-pre-commit-hooks-rust
         description: "Centralized pre-commits hooks for Rust"
