--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,4 +1,13 @@
 ---
+- id: centralized-pre-commit-hooks-python
+  name: centralized-pre-commit-hooks-python
+  description: "Centralized pre-commits hooks for Python"
+  entry: centralized-pre-commit-hooks-python
+  language: python
+  require_serial: true
+  verbose: true
+  stages:
+    - pre-commit
 - id: centralized-pre-commit-hooks-rust
   name: centralized-pre-commit-hooks-rust
   description: "Centralized pre-commits hooks for Rust"
