--- a/.release-it.json
+++ b/.release-it.json
@@ -11,7 +11,9 @@
         "release": true,
         "releaseName": "${version}",
         "comments": {
-            "submit": true
+            "submit": true,
+            "issue": ":rocket: _This issue has been resolved in v${version}. See [${releaseName}](${releaseUrl}) for release notes._",
+            "pr": ":rocket: _This pull request is included in v${version}. See [${releaseName}](${releaseUrl}) for release notes._"
         }
     },
     "plugins": {
